Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31626

ListView does not resize highlight to correspond to delegate's size

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.2.1
    • 5.1.0 Beta 1
    • None
    • Linux

      ListView uses size of the first delegate for highlight and does not change it even when delegate has different size.
      If I set currentIndex property, highlight would have the size of the corresponding to that index delegate.

        1. Highlight.png
          Highlight.png
          7 kB
        2. HighlightResize.qml
          0.9 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            w00t Robin Burchell
            krnekit Nikita Krupenko
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes