Set highlight size for both dimensions, irrespective of ListView orientation

The assumption that all list delegates are the same size (dependent on ListView
orientation) is not a correct one, even if it is correct most of the time.

Task-number: QTBUG-31626
Change-Id: Iba6f3bc5f38d60e3be7632ab17d0c66ab8e73965
Reviewed-by: Matthew Vogt <matthew.vogt@qinetic.com.au>
Reviewed-by: J-P Nurmi <jpnurmi@digia.com>
Reviewed-by: Alan Alpert <aalpert@blackberry.com>